Footer overflow fix on socials

--- a/application/Client/src/Pages/SocialPage/SocialPage.css
+++ b/application/Client/src/Pages/SocialPage/SocialPage.css
@@ -11,7 +11,9 @@ html {
   display: flex;
   height: 100%;
 }
-
+.social-page{
+  height: 100vh;
+}
 
 .static-container {
   display: flex;
